syntax = "proto3";

option csharp_namespace = "HDL.Servicos.Alimentos.Protos";

package alimentos;

service Alimentos {
  rpc ConsultarAlimentoId (ConsultaPorIdRequest) returns (AlimentoResponse);
  rpc ConsultarAlimentoQuery(ConsultaPorQueryRequest) returns (AlimentosResponse);
}

message ConsultaPorIdRequest {
  int32 id = 1;
}

message ConsultaPorQueryRequest {
  string alimentoQuery = 1;
}

message ValorEnergetico {
  float energia = 1;
  float proteina = 2;
  float lipidiostotais = 3;
  float carboidratos = 4;
  float fibraalimentar = 5;
  
  ModoPreparo ModoPreparo = 6;
}

message ModoPreparo {
  int32 id = 1;
  string codigo = 2;
  string descricao = 3;
}

message AlimentoResponse {
  int32 id = 1;
  int32 idgrupo = 2;
  int32 codigo = 3;
  string descricao = 4;

  repeated ValorEnergetico ValorEnergetico = 5;
}

message AlimentosResponse {
  repeated AlimentoResponse alimentos = 1;
}